# MediaPlayerInfo

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  mkdocs.yml  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  nightly.yml  production.yml  staging.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: main.cpp  main.h
src/main/kotlin/dev/redstones/mediaplayerinfo/: IMediaSession.kt  MediaInfo.kt  MediaPlayerInfo.kt
src/main/kotlin/dev/redstones/mediaplayerinfo/impl/: DummyMediaPlayerInfo.kt
src/main/kotlin/dev/redstones/mediaplayerinfo/impl/linux/: LinuxMediaPlayerInfo.kt  LinuxMediaSession.kt
src/main/kotlin/dev/redstones/mediaplayerinfo/impl/linux/dbus/: Player.kt
src/main/kotlin/dev/redstones/mediaplayerinfo/impl/win/: WindowsMediaPlayerInfo.kt  WindowsMediaSession.kt
src/test/kotlin/: Main.kt
